--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,37 +12,23 @@
     <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!</p>
     <h3>Ingredients</h3>
       <ul>
-        <li>Meat:</li>
-        <p>This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</p>
-        <li>Onion:</li>
-        <p> A diced onion is cooked until translucent with the ground meat.</p>
-        <li>Canned tomatoes:</li>
-        <p>You'll need a can of tomato sauce and a can of crushed tomatoes.</p>
-        <li>Fresh herbs:</li>
-        <p>For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.</p>
-        <li>Suger:</li>
-        <p>A dash of sugar balances out all of the acidity from the tomatoes.</p>
-        <li>Spices and seasonings:</li>
-        <p>This homemade lasagna is seasoned with dried basil, dried oregano, salt, and black pepper.</p>
-        <li>Noodles:</li>
-        <p>Of course, you'll need lasagna noodles! This recipe calls for uncooked noodles, but you can use the oven-ready variety to save time.</p>
-        <li>Cheese:</li>
-        <p>The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</p>
-        <li>Eggs:</li>
-        <p>Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</p>
+        <li>Meat: This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li>
+        <li>Onion: A diced onion is cooked until translucent with the ground meat.</li>
+        <li>Canned tomatoes: You'll need a can of tomato sauce and a can of crushed tomatoes.</li>
+        <li>Fresh herbs: For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.</li>
+        <li>Suger: A dash of sugar balances out all of the acidity from the tomatoes.</li>
+        <li>Spices and seasonings: This homemade lasagna is seasoned with dried basil, dried oregano, salt, and black pepper.</li>
+        <li>Noodles: Of course, you'll need lasagna noodles! This recipe calls for uncooked noodles, but you can use the oven-ready variety to save time.</li>
+        <li>Cheese: The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li>
+        <li>Eggs: Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</li>
       </ul>
     <h3>Steps</h3>
       <ol>
-          <li>Cook the meat:</li>
-          <p>Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</p>
-          <li>Cook the noodles:</li>
-          <p>Boil the lasagna noodles in lightly salted water until they're al dente.</p>
-          <li>Make the cheese layer:</li>
-          <p>Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</p>
-          <li>Assemble the lasagna:</li>
-          <p>Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</p>
-          <li>Bake the lasagna:</li>
-          <p>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</p>
+          <li>Cook the meat: Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
+          <li>Cook the noodles: Boil the lasagna noodles in lightly salted water until they're al dente.</li>
+          <li>Make the cheese layer: Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
+          <li>Assemble the lasagna: Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
+          <li>Bake the lasagna: Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
       </ol>
 </body>
 </html>
