--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -25,10 +25,10 @@
       </ul>
     <h3>Steps</h3>
       <ol>
-          <li><strong></strong>Make the Filling:</strong> Cook the egg yolks, sugar, and milk until slightly thickened. Let cool slightly, then chill in the fridge for about an hour. When the filling has fully chilled, mix in mascarpone cheese.</li>
-          <li><strong></strong>Make the Whipped Cream:</strong> Beat heavy cream with vanilla extract until stiff peaks form.</li>
-          <li><strong></strong>Soak the Ladyfingers:</strong> Combine coffee and rum in a small bowl. Pour mixture over ladyfingers that have been split in half lengthwise.</li>
-          <li><strong></strong>Assemble the Tiramisu:</strong> Line the bottom of a baking dish with soaked ladyfingers. Spread half of the mascarpone mixture over the ladyfingers, then half of the whipped cream over that. Repeat in the same order. Dust with cocoa powder.</li>
+          <li><strong>Make the Filling:</strong> Cook the egg yolks, sugar, and milk until slightly thickened. Let cool slightly, then chill in the fridge for about an hour. When the filling has fully chilled, mix in mascarpone cheese.</li>
+          <li><strong>Make the Whipped Cream:</strong> Beat heavy cream with vanilla extract until stiff peaks form.</li>
+          <li><strong>Soak the Ladyfingers:</strong> Combine coffee and rum in a small bowl. Pour mixture over ladyfingers that have been split in half lengthwise.</li>
+          <li><strong>Assemble the Tiramisu:</strong> Line the bottom of a baking dish with soaked ladyfingers. Spread half of the mascarpone mixture over the ladyfingers, then half of the whipped cream over that. Repeat in the same order. Dust with cocoa powder.</li>
       </ol>
 </body>
 </html>
