--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
       <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
-        <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
+        <li class="button"><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li class="button"><a href="recipes/spaghetti.html">Spaghetti</a></li>
+        <li class="button"><a href="recipes/tiramisu.html">Tiramisu</a></li>
       </ul>
 </body>
 </html>
