add[html]: added footer with copyright notice

--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
         <li class="button"><a href="recipes/tiramisu.html">Tiramisu</a></li>
       </ul>
 </body>
+<footer>
+  <p>&copy;Oneshoredrip4</p>
+</footer>
 </html>
