--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes_style.css">
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="../img/lasagna.jpg" alt="Lasagna with bread and salad on the side" width="800" height="400" loading="eager">
-    <h2>Description</h2>
-    <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!</p>
+      <h1>Lasagna</h1>
+    <div class="container">
+      <img src="../img/lasagna.jpg" alt="Lasagna with bread and salad on the side" width="1280" height="853" loading="eager">
+    <div class="description">
+      <h2>Description</h2>
+      <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!</p>
+    </div>
+  </div>
     <h3>Ingredients</h3>
       <ul>
         <li><strong>Meat:</strong> This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li>
