--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes_style.css">
     <title>Spaghetti</title>
 </head>
 <body>
-    <h1>Spaghetti</h1>
-    <img src="../img/spaghetti.jpg" alt="plate of spaghetti" width="800" height="400" loading="eager">
-    <h2>Description</h2>
-    <p>This recipe has been handed down from my mother. It is a family favorite and will not be replaced! (Definite husband pleaser!) Serve over any variety of hot cooked pasta.</p>
+      <h1>Spaghetti</h1>
+  <div class="container">  
+      <img src="../img/spaghetti.jpg" alt="plate of spaghetti" width="1280" height="697" loading="eager">
+    <div class="description">
+      <h2>Description</h2>
+      <p>This recipe has been handed down from my mother. It is a family favorite and will not be replaced! (Definite husband pleaser!) Serve over any variety of hot cooked pasta.</p>
+    </div>
+  </div>
     <h3>Ingredients</h3>
       <ul>
         <li>1 pound ground beef</li>
