--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes_style.css">
     <title>Tiramisu</title>
 </head>
 <body>
-    <h1>Tiramisu</h1>
-    <img src="../img/tiramisu.jpg" alt="plate of tiramisu with red fruit" width="800" height="400" loading="eager">
-    <h2>Description</h2>
-    <p>Tiramisu is a classic Italian layered dessert with rum-flavored, coffee-soaked ladyfingers, a creamy mascarpone custard, and whipped cream. This tiramisu recipe is easy to make at home for an impressive no-bake dessert.</p>
+      <h1>Tiramisu</h1>
+  <div class="container">
+      <img src="../img/tiramisu.jpg" alt="plate of tiramisu with red fruit" width="1280" height="853" loading="eager">
+    <div class="description"> 
+      <h2>Description</h2>
+      <p>Tiramisu is a classic Italian layered dessert with rum-flavored, coffee-soaked ladyfingers, a creamy mascarpone custard, and whipped cream. This tiramisu recipe is easy to make at home for an impressive no-bake dessert.</p>
+    </div>
+  </div>
     <h3>Ingredients</h3>
       <ul>
         <li><strong>Yolks:</strong> Egg yolks are essential for a thick, rich, velvety smooth filling. Though some traditional recipes use raw eggs, this one doesn't — raw eggs carry the risk of food-borne illness.</li>
