fix[html]: changed location of img

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,13 +8,11 @@
 </head>
 <body>
       <h1>Spaghetti</h1>
-  <div class="container">  
-      <img src="../img/spaghetti.jpg" alt="plate of spaghetti" width="1280" height="697" loading="eager">
     <div class="description">
       <h2>Description</h2>
       <p>This recipe has been handed down from my mother. It is a family favorite and will not be replaced! (Definite husband pleaser!) Serve over any variety of hot cooked pasta.</p>
     </div>
-  </div>
+  <div class="recipe">
     <h3>Ingredients</h3>
       <ul>
         <li>1 pound ground beef</li>
@@ -29,6 +27,7 @@
         <li>1 teaspoon salt</li>
         <li>1/2 teaspoon ground black pepper</li>
       </ul>
+      <img src="../img/spaghetti.jpg" alt="plate of spaghetti" width="1280" height="697" loading="eager">
     <h3>Steps</h3>
       <ol>
           <li>Gather all ingredients.</li>
@@ -36,5 +35,6 @@
           <li>Stir diced tomatoes, tomato sauce, and tomato paste into the pan. Season with oregano, basil, salt, and pepper. Simmer spaghetti sauce for 1 hour, stirring occasionally.</li>
           <li>Serve hot and enjoy!</li>
       </ol>
+    </div>    
 </body>
 </html>
