--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,25 +8,24 @@
 </head>
 <body>
       <h1>Lasagna</h1>
-    <div class="container">
-      <img src="../img/lasagna.jpg" alt="Lasagna with bread and salad on the side" width="1280" height="853" loading="eager">
     <div class="description">
       <h2>Description</h2>
       <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!</p>
     </div>
-  </div>
+  <div class="recipe">
     <h3>Ingredients</h3>
       <ul>
         <li><strong>Meat:</strong> This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li>
         <li><strong>Onion:</strong> A diced onion is cooked until translucent with the ground meat.</li>
         <li><strong>Canned tomatoes:</strong> You'll need a can of tomato sauce and a can of crushed tomatoes.</li>
         <li><strong>Fresh herbs:</strong> For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.</li>
-        <li><strong>Suger:</strong> A dash of sugar balances out all of the acidity from the tomatoes.</li>
+        <li><strong>Sugar:</strong> A dash of sugar balances out all of the acidity from the tomatoes.</li>
         <li><strong>Spices and seasonings:</strong> This homemade lasagna is seasoned with dried basil, dried oregano, salt, and black pepper.</li>
         <li><strong>Noodles:</strong> Of course, you'll need lasagna noodles! This recipe calls for uncooked noodles, but you can use the oven-ready variety to save time.</li>
         <li><strong>Cheese:</strong> The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li>
         <li><strong>Eggs:</strong> Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</li>
       </ul>
+      <img src="../img/lasagna.jpg" alt="Lasagna with bread and salad on the side" width="1280" height="853" loading="eager">
     <h3>Steps</h3>
       <ol>
           <li><strong>Cook the meat:</strong> Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
@@ -35,5 +34,6 @@
           <li><strong>Assemble the lasagna:</strong> Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
           <li><strong>Bake the lasagna:</strong> Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
       </ol>
+  </div>    
 </body>
 </html>
