--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -8,13 +8,11 @@
 </head>
 <body>
       <h1>Tiramisu</h1>
-  <div class="container">
-      <img src="../img/tiramisu.jpg" alt="plate of tiramisu with red fruit" width="1280" height="853" loading="eager">
     <div class="description"> 
       <h2>Description</h2>
       <p>Tiramisu is a classic Italian layered dessert with rum-flavored, coffee-soaked ladyfingers, a creamy mascarpone custard, and whipped cream. This tiramisu recipe is easy to make at home for an impressive no-bake dessert.</p>
     </div>
-  </div>
+  <div class="recipe">
     <h3>Ingredients</h3>
       <ul>
         <li><strong>Yolks:</strong> Egg yolks are essential for a thick, rich, velvety smooth filling. Though some traditional recipes use raw eggs, this one doesn't — raw eggs carry the risk of food-borne illness.</li>
@@ -28,6 +26,7 @@
         <li><strong>Ladyfingers:</strong> Ladyfingers are small sponge cakes that are shaped like thick fingers. If you can't find ladyfingers at your grocery store, you can use pound cake cut into strips.</li>
         <li><strong>Cacoa Powder:</strong> Finish off this decadent dessert with a generous dusting of cocoa powder.</li>
       </ul>
+      <img src="../img/tiramisu.jpg" alt="plate of tiramisu with red fruit" width="1280" height="853" loading="eager">
     <h3>Steps</h3>
       <ol>
           <li><strong>Make the Filling:</strong> Cook the egg yolks, sugar, and milk until slightly thickened. Let cool slightly, then chill in the fridge for about an hour. When the filling has fully chilled, mix in mascarpone cheese.</li>
@@ -35,5 +34,6 @@
           <li><strong>Soak the Ladyfingers:</strong> Combine coffee and rum in a small bowl. Pour mixture over ladyfingers that have been split in half lengthwise.</li>
           <li><strong>Assemble the Tiramisu:</strong> Line the bottom of a baking dish with soaked ladyfingers. Spread half of the mascarpone mixture over the ladyfingers, then half of the whipped cream over that. Repeat in the same order. Dust with cocoa powder.</li>
       </ol>
+  </div>
 </body>
 </html>
