fix[html]: changed location of img
second location change and created new class called: img

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -14,6 +14,9 @@
     </div>
   <div class="recipe">
     <h3>Ingredients</h3>
+    <div class="img">
+      <img src="../img/spaghetti.jpg" alt="plate of spaghetti" width="1280" height="697" loading="eager">
+    </div>
       <ul>
         <li>1 pound ground beef</li>
         <li>1 medium onion, chopped</li>
@@ -27,8 +30,7 @@
         <li>1 teaspoon salt</li>
         <li>1/2 teaspoon ground black pepper</li>
       </ul>
-      <img src="../img/spaghetti.jpg" alt="plate of spaghetti" width="1280" height="697" loading="eager">
-    <h3>Steps</h3>
+      <h3>Steps</h3>
       <ol>
           <li>Gather all ingredients.</li>
           <li>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat. Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes. Drain grease.</li>
