--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,6 +14,9 @@
     </div>
   <div class="recipe">
     <h3>Ingredients</h3>
+    <div class="img">
+      <img src="../img/lasagna.jpg" alt="Lasagna with bread and salad on the side" width="1280" height="853" loading="eager">
+    </div>
       <ul>
         <li><strong>Meat:</strong> This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li>
         <li><strong>Onion:</strong> A diced onion is cooked until translucent with the ground meat.</li>
@@ -25,8 +28,7 @@
         <li><strong>Cheese:</strong> The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li>
         <li><strong>Eggs:</strong> Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</li>
       </ul>
-      <img src="../img/lasagna.jpg" alt="Lasagna with bread and salad on the side" width="1280" height="853" loading="eager">
-    <h3>Steps</h3>
+      <h3>Steps</h3>
       <ol>
           <li><strong>Cook the meat:</strong> Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
           <li><strong>Cook the noodles:</strong> Boil the lasagna noodles in lightly salted water until they're al dente.</li>
