--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -14,6 +14,9 @@
     </div>
   <div class="recipe">
     <h3>Ingredients</h3>
+    <div class="img">
+      <img src="../img/tiramisu.jpg" alt="plate of tiramisu with red fruit" width="1280" height="853" loading="eager">
+    </div>
       <ul>
         <li><strong>Yolks:</strong> Egg yolks are essential for a thick, rich, velvety smooth filling. Though some traditional recipes use raw eggs, this one doesn't — raw eggs carry the risk of food-borne illness.</li>
         <li><strong>Sugar:</strong> White sugar is cooked with egg yolks and combined with mascarpone to create a sweet, creamy filling.</li>
@@ -26,8 +29,7 @@
         <li><strong>Ladyfingers:</strong> Ladyfingers are small sponge cakes that are shaped like thick fingers. If you can't find ladyfingers at your grocery store, you can use pound cake cut into strips.</li>
         <li><strong>Cacoa Powder:</strong> Finish off this decadent dessert with a generous dusting of cocoa powder.</li>
       </ul>
-      <img src="../img/tiramisu.jpg" alt="plate of tiramisu with red fruit" width="1280" height="853" loading="eager">
-    <h3>Steps</h3>
+      <h3>Steps</h3>
       <ol>
           <li><strong>Make the Filling:</strong> Cook the egg yolks, sugar, and milk until slightly thickened. Let cool slightly, then chill in the fridge for about an hour. When the filling has fully chilled, mix in mascarpone cheese.</li>
           <li><strong>Make the Whipped Cream:</strong> Beat heavy cream with vanilla extract until stiff peaks form.</li>
