add[html]: div class .list

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -17,6 +17,7 @@
     <div class="img">
       <img src="../img/lasagna.jpg" alt="Lasagna with bread and salad on the side" width="1280" height="853" loading="eager">
     </div>
+    <div class="list">
       <ul>
         <li><strong>Meat:</strong> This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li>
         <li><strong>Onion:</strong> A diced onion is cooked until translucent with the ground meat.</li>
@@ -36,6 +37,7 @@
           <li><strong>Assemble the lasagna:</strong> Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
           <li><strong>Bake the lasagna:</strong> Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
       </ol>
+    </div>  
   </div>    
 </body>
 </html>
