--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -17,6 +17,7 @@
     <div class="img">
       <img src="../img/spaghetti.jpg" alt="plate of spaghetti" width="1280" height="697" loading="eager">
     </div>
+    <div class="list">
       <ul>
         <li>1 pound ground beef</li>
         <li>1 medium onion, chopped</li>
@@ -30,13 +31,14 @@
         <li>1 teaspoon salt</li>
         <li>1/2 teaspoon ground black pepper</li>
       </ul>
-      <h3>Steps</h3>
+    <h3>Steps</h3>
       <ol>
-          <li>Gather all ingredients.</li>
-          <li>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat. Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes. Drain grease.</li>
-          <li>Stir diced tomatoes, tomato sauce, and tomato paste into the pan. Season with oregano, basil, salt, and pepper. Simmer spaghetti sauce for 1 hour, stirring occasionally.</li>
-          <li>Serve hot and enjoy!</li>
+        <li>Gather all ingredients.</li>
+        <li>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat. Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes. Drain grease.</li>
+        <li>Stir diced tomatoes, tomato sauce, and tomato paste into the pan. Season with oregano, basil, salt, and pepper. Simmer spaghetti sauce for 1 hour, stirring occasionally.</li>
+        <li>Serve hot and enjoy!</li>
       </ol>
-    </div>    
+    </div>  
+  </div>    
 </body>
 </html>
