--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -17,6 +17,7 @@
     <div class="img">
       <img src="../img/tiramisu.jpg" alt="plate of tiramisu with red fruit" width="1280" height="853" loading="eager">
     </div>
+    <div class="list">
       <ul>
         <li><strong>Yolks:</strong> Egg yolks are essential for a thick, rich, velvety smooth filling. Though some traditional recipes use raw eggs, this one doesn't — raw eggs carry the risk of food-borne illness.</li>
         <li><strong>Sugar:</strong> White sugar is cooked with egg yolks and combined with mascarpone to create a sweet, creamy filling.</li>
@@ -31,11 +32,12 @@
       </ul>
       <h3>Steps</h3>
       <ol>
-          <li><strong>Make the Filling:</strong> Cook the egg yolks, sugar, and milk until slightly thickened. Let cool slightly, then chill in the fridge for about an hour. When the filling has fully chilled, mix in mascarpone cheese.</li>
-          <li><strong>Make the Whipped Cream:</strong> Beat heavy cream with vanilla extract until stiff peaks form.</li>
-          <li><strong>Soak the Ladyfingers:</strong> Combine coffee and rum in a small bowl. Pour mixture over ladyfingers that have been split in half lengthwise.</li>
-          <li><strong>Assemble the Tiramisu:</strong> Line the bottom of a baking dish with soaked ladyfingers. Spread half of the mascarpone mixture over the ladyfingers, then half of the whipped cream over that. Repeat in the same order. Dust with cocoa powder.</li>
+        <li><strong>Make the Filling:</strong> Cook the egg yolks, sugar, and milk until slightly thickened. Let cool slightly, then chill in the fridge for about an hour. When the filling has fully chilled, mix in mascarpone cheese.</li>
+        <li><strong>Make the Whipped Cream:</strong> Beat heavy cream with vanilla extract until stiff peaks form.</li>
+        <li><strong>Soak the Ladyfingers:</strong> Combine coffee and rum in a small bowl. Pour mixture over ladyfingers that have been split in half lengthwise.</li>
+        <li><strong>Assemble the Tiramisu:</strong> Line the bottom of a baking dish with soaked ladyfingers. Spread half of the mascarpone mixture over the ladyfingers, then half of the whipped cream over that. Repeat in the same order. Dust with cocoa powder.</li>
       </ol>
+    </div>  
   </div>
 </body>
 </html>
