add[html]: added second div class list for ul

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -31,7 +31,9 @@
         <li>1 teaspoon salt</li>
         <li>1/2 teaspoon ground black pepper</li>
       </ul>
+    </div>  
     <h3>Steps</h3>
+    <div class="list">
       <ol>
         <li>Gather all ingredients.</li>
         <li>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat. Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes. Drain grease.</li>
