--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -30,7 +30,9 @@
         <li><strong>Ladyfingers:</strong> Ladyfingers are small sponge cakes that are shaped like thick fingers. If you can't find ladyfingers at your grocery store, you can use pound cake cut into strips.</li>
         <li><strong>Cacoa Powder:</strong> Finish off this decadent dessert with a generous dusting of cocoa powder.</li>
       </ul>
+    </div>
       <h3>Steps</h3>
+    <div class="list">
       <ol>
         <li><strong>Make the Filling:</strong> Cook the egg yolks, sugar, and milk until slightly thickened. Let cool slightly, then chill in the fridge for about an hour. When the filling has fully chilled, mix in mascarpone cheese.</li>
         <li><strong>Make the Whipped Cream:</strong> Beat heavy cream with vanilla extract until stiff peaks form.</li>
