--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -29,7 +29,9 @@
         <li><strong>Cheese:</strong> The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li>
         <li><strong>Eggs:</strong> Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</li>
       </ul>
+    </div>  
       <h3>Steps</h3>
+    <div class="list"> 
       <ol>
           <li><strong>Cook the meat:</strong> Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
           <li><strong>Cook the noodles:</strong> Boil the lasagna noodles in lightly salted water until they're al dente.</li>
